--- a/PhotoMaster/PhotoMaster.csproj
+++ b/PhotoMaster/PhotoMaster.csproj
@@ -1,14 +1,17 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <OutputType>WinExe</OutputType>
+    <OutputType>Exe</OutputType>
     <TargetFramework>net6.0-windows</TargetFramework>
-    <UseWPF>true</UseWPF>
+    <UserSecretsId>3e829608-0657-4ecf-9c0f-68b9d73b2c79</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="ff_wpf_tools" Version="1.1.0" />
-    <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.UserSecrets" Version="5.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\vendor\CasCap.Apis.GooglePhotos\src\CasCap.Apis.GooglePhotos\CasCap.Apis.GooglePhotos.csproj" />
   </ItemGroup>
 
 </Project>
